--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "include-all": "^1.0.0",
     "lodash": "^4.17.4",
     "multer": "^1.3.0",
+    "ng2-file-upload": "^1.2.1",
+    "oi.file": "0.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9",
