Edit upload files

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sails-disk": "~0.10.9",
     "sails-generate-static": "^0.11.3",
     "sails-mssqlserver": "^0.14.3",
+    "skipper-disk": "^0.5.9",
     "xlsx-populate": "^1.6.1"
   },
   "scripts": {
