--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular-animate": "^1.6.4",
     "angular-file-upload": "^2.5.0",
+    "date-ru": "^0.1.1",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -29,8 +30,8 @@
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9",
     "sails-generate-static": "^0.11.3",
-    "sails-mssqlserver": "^0.14.3",
     "sails-mongo": "^0.12.2",
+    "sails-mssqlserver": "^0.14.3",
     "sails-mysql": "^0.11.5",
     "save-as": "^0.1.8",
     "skipper-disk": "^0.5.9",
